# potree-embed

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  release-plz.toml
.github/workflows/: build-and-test.yml  release-plz.yml
potree/: gulpfile.js  package-lock.json  package.json
potree/src/workers/2.0/: DecoderWorker.js  DecoderWorker_brotli.js
scripts/: build_potree_assets.sh  copy_potree_assets.sh
src/: lib.rs
